--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ body {
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4><a href="https://98767655.github.io/Character-Quiz/">Character-Quiz</a></h4>
+          <p>this mean the input can be use to maka a -,also can be use for give style </p>
 
           <h4>Subheading</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
