--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           <h4><a href="https://98767655.github.io/Character-Quiz/">Character-Quiz</a></h4>
           <p>this mean the input can be use to maka a Question,also can be use for give style </p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4><a href="https://98767655.github.io/fansite/indes.html">fansite</a></h4>
+          <p></p>
 
           <h4>Subheading</h4>
           <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
