Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p>this mean the input can be use to maka a Question,also can be use for give style </p>
 
           <h4><a href="https://98767655.github.io/fansite/indes.html">fansite</a></h4>
-          <p> here i make other   </p>
+          <p> here i make styles.css for give style to each page </p>
 
           <h4>Subheading</h4>
           <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
