--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <h4><a href="https://98767655.github.io/fansite/indes.html">fansite</a></h4>
           <p> here i make styles.css for give style to each page </p>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h4><a href="https://98767655.github.io/Page-Title/">fotuner telle</a></h4>
+          <p> use var=# to give a point of view to the amount paid per hour  </p>
         </div>
 
         <div class="col-lg-6">
