Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ body {
           <h4><a href="https://98767655.github.io/fansite/indes.html">fansite</a></h4>
           <p> here i make styles.css for give style to each page </p>
 
-          <h4><a href="https://98767655.github.io/Page-Title/">fotuner telle</a></h4>
+          <h4><a href="https://98767655.github.io/Page-Title/">fortune teller</a></h4>
           <p> use var=# to give a point of view to the amount paid per hour  </p>
         </div>
 
