Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </div>
 
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4><a href="https://98767655.github.io/073-Compound-Conditionals-ScriptEd-Social-Club/">Compound-ConditionalsScriptE</a></h4>
+          <p>Composite conditional use this for that so that the two condition mergers at the same time</p>
 
           <h4>Subheading</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
