--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
           <h4><a href="https://98767655.github.io/Page-Title-2/">Mini-Project - Kim & Kanye Madlibs
 </a></h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <p>use the inputo complet the pagraftr.</p>
         </div>
       </div>
 
