--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ body {
 
           <h4><a href="https://98767655.github.io/Page-Title-2/">Mini-Project - Kim &amp; Kanye Madlibs
 </a></h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <p>use the inputo complet the pagraftr.</p>
         </div>
       </div>
 
