--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@ body {
           <h4><a href="https://98767655.github.io/Page-Title-2/">Mini-Project - Kim &amp; Kanye Madlibs
 </a></h4>
           <p>use the inputo complet the pagraftr.</p>
+          <h4><a href="https://98767655.github.io/Mood-Board/">mood board</a></h4>
+          <p>use the Functions to do more organized </p>
         </div>
       </div>
 
